[package]
name = "dicom_vol_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dicom = "0.6.3"
dicom-object = "0.6.3"
dicom-pixeldata = { version = "0.2", features = ["image", "ndarray"] }
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
three-d = { version="0.16.3", features=["egui-gui"] }
three-d-asset = {version = "0.6", features = ["vol"] }
tokio = { version="1.35.1", features=["full"] }
